// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProcessTable /> renders correctly without items 1`] = `
<Table
  as="table"
  className="ProcessTable"
  inverted={true}
>
  <TableHeader
    as="thead"
  >
    <TableRow
      as="tr"
      cellAs="td"
    >
      <TableHeaderCell
        as="th"
      >
        Project
      </TableHeaderCell>
      <TableHeaderCell
        as="th"
      >
        Command
      </TableHeaderCell>
      <TableHeaderCell
        as="th"
      >
        Status
      </TableHeaderCell>
      <TableHeaderCell
        as="th"
      />
    </TableRow>
  </TableHeader>
  <TableBody
    as="tbody"
  />
</Table>
`;

exports[`<ProcessTable /> renders items correctly 1`] = `
<Table
  as="table"
  className="ProcessTable"
  inverted={true}
>
  <TableHeader
    as="thead"
  >
    <TableRow
      as="tr"
      cellAs="td"
    >
      <TableHeaderCell
        as="th"
      >
        Project
      </TableHeaderCell>
      <TableHeaderCell
        as="th"
      >
        Command
      </TableHeaderCell>
      <TableHeaderCell
        as="th"
      >
        Status
      </TableHeaderCell>
      <TableHeaderCell
        as="th"
      />
    </TableRow>
  </TableHeader>
  <TableBody
    as="tbody"
  >
    <ForwardRef(Relay(ProcessTableRow))
      item={
        Object {
          " $fragmentRefs": null,
          " $refType": null,
          "id": "id1",
        }
      }
      key="id1"
      onStartProcess={[MockFunction]}
      onStopProcess={[MockFunction]}
    />
    <ForwardRef(Relay(ProcessTableRow))
      item={
        Object {
          " $fragmentRefs": null,
          " $refType": null,
          "id": "id2",
        }
      }
      key="id2"
      onStartProcess={[MockFunction]}
      onStopProcess={[MockFunction]}
    />
  </TableBody>
</Table>
`;
